      constructor, allowing these arguments to be overridden.

    - sqlsoup db.<sometable>.update() and delete() now call
      query(cls).update() and delete(), respectively.
    
    - sqlsoup now has execute() and connection(), which call upon
      the Session methods of those names, ensuring that the bind is
      in terms of the SqlSoup object's bind.
    
    - The signature of the proxy_factory callable passed to 
      association_proxy is now (lazy_collection, creator, 
      value_attr, association_proxy), adding a fourth argument
      that is the parent AssociationProxy argument.  Allows
      serializability and subclassing of the built in collections.
      [ticket:1259]

- examples
    - The "query_cache" examples have been removed, and are replaced
      with a fully comprehensive approach that combines the usage of
      Beaker with SQLAlchemy.  New query options are used to indicate
      the caching characteristics of a particular Query, which 
      can also be invoked deep within an object graph when lazily
      loading related objects.  See /examples/beaker_caching/README.
    
0.5.8
=====
- sql
    - The copy() method on Column now supports uninitialized,
      unnamed Column objects. This allows easy creation of 
      declarative helpers which place common columns on multiple 
      subclasses.
    
    - Default generators like Sequence() translate correctly
      across a copy() operation.
      
    - Sequence() and other DefaultGenerator objects are accepted 
      as the value for the "default" and "onupdate" keyword
      arguments of Column, in addition to being accepted
      positionally.  
      
    - Fixed a column arithmetic bug that affected column
      correspondence for cloned selectables which contain
      free-standing column expressions.   This bug is
      generally only noticeable when exercising newer 
      ORM behavior only availble in 0.6 via [ticket:1568], 